--- a/index.html
+++ b/index.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khamdihi Dev</title>
+    <link rel="icon" href="https://i.pinimg.com/564x/d9/95/73/d99573fe7fb1aa83fded7234d4cabf50.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Khamdihi dev</title>
 </head>
 <body>
-    <div class="fullcntr">
-        <nav class="wrap">
-            <div class="brand">KHAMDIHI <span> DEV</span></div>
-            <ul class="navigation">
-                <li><a href="" class="aktive">Home</a></li>
-                <li><a href="">Kontak</a></li>
-                <li><a href="">Jasa</a></li>
-                <li><img src="source.gif" alt=""></li>
-            </ul>
-        </nav>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://wa.me/+6283853140469">Jasa</a></li>
+            <li><a href="https://github.com/khamdihi-dev/Prem">Hacking Script</a></li>
+        </ul>
+    </nav>
+    <div class="profile-container">
+        <div class="profile-pic">
+            <img id="profileImage" src="source.gif" alt="Profile Picture">
+        </div>
+        <div class="profile-info">
+            <h1 id="profileName">Nama Anda</h1>
+            <p id="profileBio">Bio singkat Anda...</p>
+            <div class="media">
+                <a href="https://wa.me/+6283853140469"><img src="https://img.icons8.com/?size=100&id=16712&format=png&color=000000" alt=""></a>
+                <a href="https://web.facebook.com/TTL281206/"><img src="https://img.icons8.com/?size=100&id=435&format=png&color=000000" alt=""></a>
+                <a href="https://github.com/khamdihi-dev"><img src="https://img.icons8.com/?size=100&id=12598&format=png&color=000000" alt=""></a>
+                <a href="https://instagram.com/"><img src="https://img.icons8.com/?size=100&id=32292&format=png&color=000000" alt=""></a>
+            </div>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
-<div class="isi">
-    <img class="foto" src="Coding-influences-your-students-self-esteem.png"/>
-    <div class="myb">
-        <p class="sambutan">Make Your Script Cooler</p>
-        <p class="me">Hi, I'm Khamdihi Dev, Python Programmer</p>
-        <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur incidunt id cumque dolor itaque tempora. Exercitationem reiciendis similique earum porro.</p>
-        <button><a href="">Get Started</a></button>
-    </div>
-</div>
 </html>
