--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <input type="text" id="name" name="name" required><br><br>        
         <button type="submit">Submit</button>
     </form>
+    <script src="server.js"></script>
 </body>
 </html>
