--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Form POST to Server</title>
+<title>Tiktok Downloader</title>
 </head>
 <body>
-    <h2>Form POST Example</h2>
-    <form action="/server.js" method="POST">
-        <label for="name">Url: </label><br>
-        <input type="text" id="name" name="name" required><br><br>        
-        <button type="submit">Submit</button>
-    </form>
     <script src="server.js"></script>
 </body>
 </html>
