--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tiktok Downloader</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tiktok Downloader</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="server.js"></script>
+
+<nav class="navbar">
+  <div class="container">
+    <a href="#" class="brand">Save Tiktok</a>
+    <ul class="nav-list" id="navList">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <div class="burger" id="burger">
+      <span class="burger-bar"></span>
+      <span class="burger-bar"></span>
+      <span class="burger-bar"></span>
+    </div>
+  </div>
+</nav>
+<div class="container-post">
+    <h2>Download vidio tiktok free</h2>
+    <form method="post" action="http://localhost:3028/download">
+      <input type="url" id="url" name="url" placeholder="Masukan link vidio tiktok" required><br><br>
+      <button type="submit">Download</button>
+    </form>
+    <div id="responseMessage"></div>
+  </div>
+<script src="script.js"></script>
+
 </body>
 </html>
