--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </nav>
 <div class="container-post">
     <h2>Download vidio tiktok free</h2>
-    <form method="post" action="https://ads-livid.vercel.app/download">
+    <form method="post" action="https://ads-psvp3ggaf-khamdihi-devs-projects.vercel.app/download">
       <input type="url" id="url" name="url" placeholder="Masukan link vidio tiktok" required><br><br>
       <button type="submit">Download</button>
     </form>
