--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="1Qgzs9EdfIKts9ynVOy8_oR8TpPQsKYL_aE48tdmlCs" />
   <title>Tiktok Downloader</title>
   <link rel="stylesheet" href="style.css">
 </head>
